# command-not-found-neoterm

./: Makefile  Makefile.am  README.md  command-not-found-neoterm_0.3.0_all.deb  manifest.json  manifest.yml  yaml_to_json.py
control-files-dir/: postrm
etc/: zsh_command_not_found
etc/apt/apt.conf.d/: 50command-not-found
share/command-not-found/: cnf-update-db  command-not-found
share/command-not-found/CommandNotFound/: CommandNotFound.py
share/command-not-found/CommandNotFound/db/: creator.py  db.py
share/doc/command-not-found/: README.Debian  README.md  copyright
share/python3/runtime.d/: command-not-found.rtupdate
